--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -12,7 +12,10 @@
     "paper-search-input": "^1.0.0",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
     "iron-icon": "PolymerElements/iron-icon#^1.0.9",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
+    "iron-localstorage": "PolymerElements/iron-localstorage#^1.0.6",
+    "paper-dialog": "PolymerElements/paper-dialog#^1.1.0",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
